# inverseMatrix

./: README.md
MPI/: CMakeLists.txt
MPI/include/: matrix.h  utils.h
MPI/src/: lu.c  main.c  matrix.c  utils.c
openMP/: CMakeLists.txt
openMP/doc/: doc.html
openMP/doc/html/: functions_vars.html  index.html  lu_8h.html  luinversematrix_8h.html  luinversematrix_8h_source.html  matrix_8h.html  matrix_8h_source.html
openMP/doc/html/search/: all_70.js  all_73.js  all_74.js  functions_63.js  functions_66.js  variables_73.js
openMP/doc/latex/: doxygen.sty  lu_8h.tex  refman.tex  structSquareMatrix.tex
openMP/include/: matrix.h
openMP/src/: lu.c  main.c  matrix.c
sequential/: CMakeLists.txt
sequential/doc/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  lu_8h.html  lu_8h_source.html  matrix_8h.html  matrix_8h_source.html  structSquareMatrix-members.html  structSquareMatrix.html
sequential/doc/html/search/: all_63.js  all_64.js  all_6c.js  all_6d.js  classes_73.js  functions_66.js  functions_67.js  functions_69.js  functions_6d.js  search.js  variables_64.js  variables_6d.js
sequential/doc/latex/: annotated.tex  doxygen.sty  files.tex  lu_8h.tex  luinversematrix_8h.tex  matrix_8h.tex  refman.tex  structSquareMatrix.tex
sequential/include/: matrix.h
sequential/src/: lu.c  main.c  matrix.c
